kubernetes/apps/security/wazuh/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wazuh
  namespace: security
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https-main
  hostnames: ["wazuh.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: wazuh-dashboard
          port: 5601
